# grid-silicon

./: AGENTS.md  README.md  grid_silicon.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
data/fixtures/ercot/2026-05/: energization.csv  evidence.csv  queue.csv
decisions/: DEC-GRDS-001-realness-score-schema.md
docs/: first-pr.md
reports/: 2026-05.jsonl
schemas/: evidence-item.schema.json  realness-score.schema.json
scripts/: traceability.py  validate_schemas.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
src/grid_silicon/: __init__.py  cli.py  ercot.py  models.py  report.py  scoring.py  validation.py
tests/: test_cli.py  test_ercot_fixture.py  test_scoring.py  test_validation.py
