[project]
name = "grid-silicon"
version = "0.1.0"
description = "ERCOT fixture-first phantom-vs-real load scoring pilot."
authors = [{name = "Vignesh Gopalakrishnan"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.scripts]
grid-silicon = "grid_silicon.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grid_silicon"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
